# pyFade

./: .gitignore  .pylintrc  CLAUDE.md  Changelog.md  LICENSE  README.md  UI_LAYOUT_CHANGE.md  demo_completion_frame.py  demo_multimode_completion.py  demo_results.html  pylint_final_output.txt  pylint_output.txt  pyproject.toml  requirements.txt  run.py  test_multimode_simple.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: code-quality-compliance.md  copilot-code-quality-compliance.md  copilot-fix-bug.md  copilot-implement-feature.md  copilot-tests-suite-maintenance.md
.github/prompts/: analyzeTaskDefinition.prompt.md  fixBug.prompt.md  fixPylint.prompt.md  generate_issue_from_test.prompt.md  implementFromTests.prompt.md  implementUI.prompt.md  refactor.prompt.md  updateDocs.prompt.md  updateTests.prompt.md
.github/workflows/: copilot-setup-steps.yml  qa.yml
docs/: EXTENDED_NEW_COMPLETION_WIDGET.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ROLE_TAG_INSERT.md  PROMPT_ROLE_TAG_INSERT.md  complex_filters_guide.md  datasets_import.md  encryption.md  filter_ui_guide.md  interactive_beam_search.md  new_completions.md  providers.md  roadmap.md  sample_notes_feature.md
py_fade/: app.py  app_config.py  features_checker.py  search_utils.py
py_fade/controllers/: blockwise_generation_controller.py  dpo_controller.py  evaluation_controller.py  export_controller.py  facet_summary_controller.py  facet_switch_controller.py  facet_utils.py  import_controller.py  kto_controller.py  text_generation_controller.py
py_fade/data_formats/: __init__.py  base_data_classes.py  base_data_format.py  dpo_data_format.py  facet_backup.py  kto_data_format.py  lm_eval_results.py  share_gpt_format.py  utils.py
py_fade/dataset/: completion.py  completion_logprobs.py  completion_pairwise_ranks.py  completion_rating.py  completion_tag.py  completions_filter.py  data_filter.py  dataset.py  dataset_base.py  export_template.py  facet.py  filter_rule.py  prompt.py  sample.py  sample_filter.py  sample_image.py  sample_tag.py  tag.py
py_fade/gui/: dialog_facet_switch.py  dialog_filter_rule.py  dialog_sample_tags.py  gui_helpers.py  widget_completion.py  widget_completion_beams.py  widget_dataset_top.py  widget_export_template.py  widget_facet.py  widget_facet_list.py  widget_launcher.py  widget_navigation_sidebar.py  widget_new_completion.py  widget_sample.py  widget_sample_filter.py  widget_tag.py  window_blockwise_generation.py  window_detached_notes.py  window_evaluation_report.py  window_export_wizard.py  window_facet_summary.py  window_import_wizard.py  window_model_manager.py  window_three_way_completion_editor.py  window_token_calculator.py
py_fade/providers/: __init__.py  base_provider.py  flat_prefix_template.py  llama_cpp.py  llm_response.py  llm_templates.py  mock_provider.py  ollama.py  providers_manager.py
py_fade/scripts/: __init__.py  ci_qa.py
tests/: README.md  conftest.py  fix_common_issues.py  mockup_data.py  test_completion_frame.py  test_completion_frame_enhanced.py  test_completion_frame_multimode.py  test_completion_rating_widget.py  test_facet_crud.py  test_flat_prefix_template.py  test_full_cycle.py  test_llama_cpp.py  test_lm_eval_format.py  test_mock_provider.py  test_token_picker.py  test_widget_dataset_top_context.py  test_widget_export_template.py  test_widget_launcher.py  test_widget_tag.py  test_widgets.py
tests/data/: results_2025-09-09T13-42-42.857006.json  samples_gsm8k_2025-09-09T13-31-53.431753.jsonl  sharegpt-structured-output-json_10.json  sharegpt-structured-output-json_10.parquet
tests/helpers/: __init__.py  data_helpers.py  export_wizard_helpers.py  facet_backup_helpers.py  ui_helpers.py
tests/test_controllers/: test_blockwise_generation_controller.py  test_evaluation_controller.py  test_facet_switch_controller.py
tests/test_database/: __init__.py  test_completion_tag.py  test_dataset.py  test_dataset_encryption.py  test_dataset_operations.py  test_facet.py  test_facet_crud.py  test_prompt.py  test_sample_facets.py  test_sample_filter.py  test_sample_image.py  test_sample_notes.py  test_sample_tag.py  test_tag.py
tests/test_integration/: __init__.py  test_facet_backup_full_cycle.py  test_full_cycle.py
tests/test_logic/: __init__.py  test_app_config.py  test_archive_alternative_logprobs.py  test_base_data_classes_images.py  test_better_truncation.py  test_completions_filter.py  test_complex_filter_application.py  test_dpo_controller.py  test_dpo_export.py  test_encrypted_export_import.py  test_export_controller.py  test_export_facet_backup.py  test_export_template.py  test_export_with_thresholds.py  test_facet_backup.py  test_facet_summary_controller.py  test_filter_rule.py  test_flat_prefix_template.py  test_import_controller.py  test_import_facet_backup.py  test_kto_export.py  test_llama_cpp.py  test_lm_eval_format.py  test_lm_eval_result.py  test_lm_eval_results.py  test_min_logprob_token.py  test_mock_provider.py  test_multiple_completions_export.py  test_share_gpt_format.py  test_sharegpt_format.py  test_text_generation_controller.py  test_utils.py
tests/test_ui/: __init__.py  test_aux_logprobs_to_color.py  test_beam_limited_continuation.py  test_beam_management_buttons.py  test_beam_mode_resume.py  test_beam_out_from_heatmap.py  test_beam_prefill_improvements.py  test_beam_search_refactored.py  test_better_truncation_ui.py  test_blockwise_generation_window.py  test_completion_context_menu.py  test_completion_frame.py  test_completion_rating_widget.py  test_completion_tags_dialog.py  test_completion_text_edit.py  test_emoji_highlighting.py  test_export_progress.py  test_export_wizard.py  test_export_wizard_integration.py  test_export_wizard_model_selection.py  test_export_wizard_simple.py  test_facet_switch_dialog.py  test_import_wizard.py  test_import_wizard_integration.py  test_navigation_completions_search.py  test_navigation_samples_by_facet.py  test_navigation_samples_by_tag.py  test_navigation_search.py  test_sample_tags_dialog.py  test_tab_title_shortening.py  test_token_calculator.py  test_token_picker.py  (+35 more)
(+27 files in other folders)
