# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyFADE"
version = "0.0.1"
authors = [
  {name="Daniel Kliuev", email="dan.kluev@gmail.com"},
]
description = "A short description of the pyFADE project."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "PyQt6>=6.6",
    "qt-material>=2.14",
    "SQLAlchemy>=2.0",
    "numpy>=1.26",
    "tiktoken>=0.7",
    "ollama>=0.2",
    "pyyaml>=6.0",
    "pandas>=2.3",
    "pyarrow>=15.0"
]

[project.urls]
"Homepage" = "https://github.com/DanielKluev/pyFade"
"Bug Tracker" = "https://github.com/DanielKluev/pyFade/issues"

[project.optional-dependencies]
dev = [ "yapf>=0.40.0", "ruff>=0.6.9", "pytest", "pytest-qt", "pylint", ]

# -------------------------------------------------------------------

[tool.yapf]
# This section contains the configuration for the YAPF formatter.
# It's tuned to keep code dense, especially function signatures.
based_on_style = "google" 
column_limit = 140
split_before_named_assigns = false
coalesce_brackets = true
dedent_closing_brackets = false